# umailer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml
app/: config.py  handler.py  main.py
backend/: config.py  crud.py  database.py  handler.py  main.py  models.py  schemas.py
